--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "homepage": "https://github.com/ulisesedu7/Webpack-Setup#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^8.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.72.1",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.1"
   }
